# motoscrap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh
docs/: adding-a-source.md  api.md
migrations/: env.py
migrations/versions/: 0001_initial.py
src/motoscrap/: __init__.py  cli.py  config.py  db.py  main.py  models.py  schemas.py
src/motoscrap/api/: catalog.py  deps.py  refresh.py  sources.py
src/motoscrap/services/: flatten.py  scraper.py
src/motoscrap/sources/: __init__.py  base.py  http.py
src/motoscrap/sources/onethousandps/: __init__.py  normalize.py  parser.py  source.py  urls.py
tests/: test_flatten.py  test_onethousandps_parser.py
tests/fixtures/onethousandps/: monster-796-2011-en.html  monster-796-2011.html  monster-796.html
